src/test/ui/str/str-concat-on-double-ref.stderr
error[E0369]: cannot add `&str` to `&String`
  --> $DIR/str-concat-on-double-ref.rs:4:15
   |
LL |     let c = a + b;
   |             --^ - &str
   |             |||
   |             ||`+` cannot be used to concatenate two `&str` strings
   |             |help: create an owned `String` from a string reference: `.to_owned()`
   |             &String
   |
   = note: string concatenation requires an owned `String` on the left

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
